# rlstatsapi

./: .gitignore  Cargo.toml  LICENSE  OVERLAY.md  README.md  dist-workspace.toml  goal_scored.txt  output.txt  pyproject.toml  test.py
.github/workflows/: python-wheels.yml  rust.yml
benches/: events_parsing.rs
examples/python_library/: README.md  demo.py  filtered_stream_events.py  goal_scored_events.py  player_board.py  player_watch.py  pyproject.toml  verify_filter_bindings.py
examples/python_library/rlstats_example/: __init__.py  client.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: event_envelope_value.rs  parse_stats_event.rs
json/: raw_clump.json  update_state.json
json/SOS/: all_examples.json  game_ball_hit.json  game_goal_scored.json  game_initialized.json  game_match_created.json  game_match_destroyed.json  game_match_ended.json  game_podium_start.json  game_post_countdown_begin.json  game_pre_countdown_begin.json  game_replay_created.json  game_replay_end.json  game_replay_start.json  game_replay_will_end.json  game_round_started_go.json  game_statfeed_event.json  game_update_state.json  sos_version.json
json/parsed_events/: BallHit.json  ClockUpdatedSeconds.json  CountdownBegin.json  GoalScored.json  GoalScoredBogus.json  ReplayWillEnd.json  StatFeedEvent.json  UpdateState.json  UpdateState_nickm.json
json/sos/: relay.json
pcaps/: rl_stats_socket_capture.pcap  rl_stats_socket_spectator_capture.pcap
src/: client.rs  config.rs  error.rs  events.rs  filters.rs  lib.rs  python_bindings.rs  sos.rs
tests/: config_policy.rs  event_filters.rs  events_parsing.rs  sos_translation.rs  tcp_reconnect.rs  tcp_stream.rs
