[package]
name = "rlstatsapi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[workspace]
members = [".", "fuzz"]
default-members = ["."]

[dependencies]
dotenvy = "0.15"
futures-util = "0.3"
pyo3 = { version = "0.23", optional = true, features = [
    "abi3-py311",
    "extension-module",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
    "io-util",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "events_parsing"
harness = false
