[package]
name = "rlstatsapi"
version = "0.1.3"
edition = "2024"
description = "Rocket League Stats API TCP client, parser, and optional Python bindings"
license = "MIT"
readme = "README.md"
repository = "https://github.com/xentrick/rlstatsapi"
homepage = "https://github.com/xentrick/rlstatsapi"
documentation = "https://docs.rs/rlstatsapi"
keywords = ["rocket-league", "stats", "events", "tcp", "pyo3"]
categories = [
    "api-bindings",
    "network-programming",
    "parser-implementations",
    "game-development",
]
rust-version = "1.85"
exclude = [
    ".env",
    ".env.*",
    ".venv/**",
    ".mypy_cache/**",
    "target/**",
    "fuzz/**",
    "examples/**",
    "json/**",
    "pyproject.toml",
    "uv.lock",
    "test.py",
]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[workspace]
members = [".", "fuzz"]
default-members = ["."]

[dependencies]
dotenvy = "0.15"
futures-util = "0.3"
pyo3 = { version = "0.23", optional = true, features = [
    "abi3-py311",
    "extension-module",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
    "io-util",
    "sync",
    "signal",
] }
tokio-tungstenite = "0.24"
url = "2.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "events_parsing"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
