[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "rlstatsapi"
dynamic = ["version"]
description = "Rocket League stats API client bindings"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
features = ["python"]
bindings = "pyo3"
