[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlstats-example-lib"
version = "0.1.0"
description = "Example Python library using rlstatsapi bindings"
requires-python = ">=3.11"
dependencies = ["rlstatsapi"]

[tool.uv.sources]
rlstatsapi = { path = "../..", editable = true }

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["rlstats_example*"]
